fixed white space issue on small views

--- a/src/components/app.css
+++ b/src/components/app.css
@@ -1,6 +1,8 @@
 
 html, body {
   font-family: 'Roboto', sans-serif;
+  width: 100vw;
+  overflow: hidden;
 }
 
 a {
